syntax = "proto3";

package order_v1;

import "google/protobuf/timestamp.proto";


option go_package= "https://github.com/kom1ssar/wb-tech/pkg/gen/proto/order_v1;order_v1";

message Delivery{
  string name = 1;
  string phone = 2;
  string zip = 3;
  string city = 4;
  string address = 5;
  string region = 6;
  string email = 7;
}

message Payment{
  string requestId = 1;
  string  currency = 2;
  string transaction = 3;
  string  provider = 4;
  int64 amount = 5;
  google.protobuf.Timestamp  payment_dt = 6;
  string bank = 7;
  int64 delivery_cost = 8;
  int64 goods_total = 9;
  int64 custom_fee = 10;

}


message Item {
  int64 chrt_id = 1;
  string track_number = 2;
  int64 price = 3;
  string rid = 4;
  string name = 5;
  int64 sale = 6;
  string size = 7;
  int64 total_price = 8;
  int64 nm_id = 9;
  string  brand = 10;
  int64  status = 11;
}


message  Order {
  string order_uid = 1;
  string track_number = 2;
  string entry = 3;
  string locale = 4;
  string internal_signature = 5;
  string customer_id = 6;
  string delivery_service = 7;
  string shard_key = 8;
  int64  sm_id = 9;
  google.protobuf.Timestamp date_created = 10;
  string oof_shard = 11;
  Delivery delivery = 12;
  Payment payment = 13;
  repeated Item items = 14;

}



